--- a/Online Shop/OmiljeniProizvodi.html
+++ b/Online Shop/OmiljeniProizvodi.html
@@ -113,7 +113,8 @@
                 if (data.length > 0) {
                     $(function () {
                         // popuni tabelu
-                        console.log(data);
+                        $("#nema").addClass('d-none');
+
                         $.each(data, function (key, k) {
                             // dodavanje reda po red
                             var kupac_dodaj_naruci = "";
@@ -144,6 +145,14 @@
                                 '</div>');
                         });
                     });
+
+                    return false;
+                }
+                else {
+                    // nema jos uvek nije proizvod
+                    $("#nema").removeClass("d-none");
+
+                    return false;
                 }
             }
         });
@@ -235,17 +244,22 @@
                                                     </div>
                                                     <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih proizvoda koje ste označili da su Vam omiljeni</h5>
                                                     <br />
-                                                    <h5 class="fw-semibold" style="letter-spacing: 1px;">Prikaz omiljenih proizvoda na Shopy platformi</h5>
-                                                    <p class="fw-normal pb-3" style="letter-spacing: 1px;">Klikom na dugme 'Pogledajte proizvod' prikazaće Vam se dati proizvod na Shopy platformi. Nedostupni proizvodi nisu vidljivi!</p>
-                                                    <div id="divgreske" class="alert alert-dark d-flex align-items-center mb-4" role="alert">
-                                                        <svg height="25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                                                            <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
-                                                        </svg>
-                                                        <span>&emsp;</span>
-                                                        <span id="greske"></span>
-                                                    </div>
                                                     <div class="pt-1 mb-4 col-12">
-                                                        <div id="proizvodi">
+                                                        <div id="proizvodi"></div>
+
+                                                        <div class="col-12 text-start" id="nema">
+                                                            <div class="card border-0">
+                                                                <div class="card-body">
+                                                                    <div class="row">
+                                                                        <div class="col-12 align-content-center">
+                                                                            <center>
+                                                                                <h4>Nije Vam se svideo nijedan proizvod na platformi Shopy? Pogledajte celokupnu ponudu!</h4>
+                                                                                <a href="Index.html" class="btn btn-success btn-lg mt-3">Celokupna Shopy ponuda</a>
+                                                                            </center>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </form>
