--- a/Online Shop/MojePorudzbine.html
+++ b/Online Shop/MojePorudzbine.html
@@ -101,7 +101,7 @@
 
         // get metoda za dobijanje listi svih proizvoda za korisnika
         $.ajax({
-            url: "/api/users/OmiljeniProizvodiPoKorisniku",
+            url: "/api/orders/MojePorudzbine",
             type: "GET",
             async: false,
             cache: false,
@@ -109,35 +109,49 @@
             contentType: "application/json; charset=utf-8",
             success: function (response) {
                 var data = JSON.parse(response);
-
                 if (data.length > 0) {
                     $(function () {
                         // popuni tabelu
                         $("#nema").addClass('d-none');
-                        console.log(data);
+
                         $.each(data, function (key, k) {
                             // dodavanje reda po red
                             var kupac_dodaj_naruci = "";
 
-                            if (k.Status)
-                                kupac_dodaj_naruci = '<a href="Proizvod.html?id=' + k.Id + '" class="btn btn-dark">Pogledajte proizvod</a>';
-                            else
-                                kupac_dodaj_naruci = '<a href="#" class="btn btn-outline-danger disabled">Proizvod nije dostupan</a>';
+                            //if (k.Status)
+                            //    kupac_dodaj_naruci = '<a href="Proizvod.html?id=' + k.Id + '" class="btn btn-dark">Pogledajte proizvod</a>';
+                            //else
+                            //    kupac_dodaj_naruci = '<a href="#" class="btn btn-outline-danger disabled">Proizvod nije dostupan</a>';
 
+                            var status = "";
+
+                            if (k.Status === 0) {
+                                // aktivna
+                                status = '<span class="h5 card-title text-primary fw-semibold justify-content-end">AKTIVNA</span>'
+                            }
+                            else if (k.Status === 1) {
+                                // izvrsena
+                                status = '<span class="h5 card-title text-success fw-semibold justify-content-end">IZVRŠENA</span>'
+                            }
+                            else {
+                                // otkazana
+                                status = '<span class="h5 card-title text-danger fw-semibold justify-content-end">OTKAZANA</span>'
+                            }
+                            
                             $("#proizvodi").append(
                                 '<div class="card mb-4 border-success">' +
                                 '<div class="card-body">' +
                                 '<div class="row justify-content-between">' +
                                 '<div class="col-2">' +
-                                '<img alt="proizvod" class="card-img-top" width="150" height="150" src="/Uploads/' + k.Slika + '" />' +
+                                '<img alt="proizvod" class="card-img-top" width="150" height="150" src="/Images/package.png" />' +
                                 '</div>' +
                                 '<div class="col-10">' +
                                 '<div class="d-flex justify-content-between">' +
-                                '<span class="h5 card-title justify-content-start">' + k.Naziv + '</span>' +
-                                '<span class="h5 card-title text-success fw-semibold justify-content-end">' + k.Grad + '</span>' +
+                                '<span class="h5 card-title justify-content-start">' + k.Proizvod.Naziv + '</span>' +
+                                status +
                                 '</div>' +
-                                '<h6 class="card-subtitle mb-2 text-muted">' + k.Cena + ' RSD</h6>' +
-                                '<p class="card-text">' + k.Opis + '</p>' +
+                                '<h6 class="card-subtitle mb-2 text-muted">Ukupno: ' + (parseFloat(k.Proizvod.Cena) * parseFloat(k.Kolicina)) + ' RSD</h6>' +
+                                '<p class="card-text">' + k.Kolicina + '</p>' +
                                 kupac_dodaj_naruci +
                                 '</div>' +
                                 '</div>' +
@@ -240,9 +254,9 @@
                                             <div class="card-body text-black">
                                                 <form>
                                                     <div class="d-flex mb-3 pb-1">
-                                                        <span class="h1 fw-bold mb-0">Omiljeni Proizvodi</span>
+                                                        <span class="h1 fw-bold mb-0">Vaše Porudžbine</span>
                                                     </div>
-                                                    <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih proizvoda koje ste označili da su Vam omiljeni</h5>
+                                                    <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih porudžbina koje su realizovane na platformi.</h5>
                                                     <br />
                                                     <div class="pt-1 mb-4 col-12">
                                                         <div id="proizvodi"></div>
@@ -253,7 +267,7 @@
                                                                     <div class="row">
                                                                         <div class="col-12 align-content-center">
                                                                             <center>
-                                                                                <h4>Nije Vam se svideo nijedan proizvod na platformi Shopy? Pogledajte celokupnu ponudu!</h4>
+                                                                                <h4>Niste još uvek naručili nijedan proizvod sa Shopy platforme? Pogledajte celokupnu ponudu!</h4>
                                                                                 <a href="Index.html" class="btn btn-success btn-lg mt-3">Celokupna Shopy ponuda</a>
                                                                             </center>
                                                                         </div>
