--- a/Online Shop/MojePorudzbine.html
+++ b/Online Shop/MojePorudzbine.html
@@ -267,6 +267,13 @@
                                                         <span class="h1 fw-bold mb-0">Vaše Porudžbine</span>
                                                     </div>
                                                     <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih porudžbina koje su realizovane na platformi.</h5>
+                                                    <div id="divgreske" class="alert alert-dark d-flex align-items-center mb-3 mt-5" role="alert">
+                                                        <svg height="25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                                            <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
+                                                        </svg>
+                                                        <span>&emsp;</span>
+                                                        <span id="greske"></span>
+                                                    </div>
                                                     <br />
                                                     <div class="pt-1 mb-4 col-12">
                                                         <div id="proizvodi"></div>
