--- a/Online Shop/MojProfil.html
+++ b/Online Shop/MojProfil.html
@@ -99,6 +99,10 @@
                             $("#kupacmeni").remove();
                             $("#uloga").text("Administrator");
                         }
+
+                        $("body").removeClass("d-none");
+
+                        return false;
                     });
                 }
                 else {
@@ -139,7 +143,7 @@
         });
     </script>
 </head>
-<body>
+<body class="d-none">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
         <div class="container">
             <a href="/" class="navbar-brand">Shopy</a>
@@ -202,6 +206,9 @@
                                                         <div class="pt-1 mb-4">
                                                             <a href="OmiljeniProizvodi.html" class="btn btn-dark btn-lg btn-block" id="omiljeniproizvodi" type="button">Omiljeni proizvodi</a>
                                                         </div>
+                                                        <div class="pt-1 mb-4">
+                                                            <a href="MojeRecenzije.html" class="btn btn-dark btn-lg btn-block" id="mojerecenzije" type="button">Moje recenzije</a>
+                                                        </div>
                                                     </div>
                                                     <div id="prodavacmeni">
                                                         <div class="pt-1 mb-4">
@@ -217,6 +224,9 @@
                                                         </div>
                                                         <div class="pt-1 mb-4">
                                                             <a href="ListaPorudzbina.html" class="btn btn-dark btn-lg btn-block" id="listaporudzbina" type="button">Lista porudžbina</a>
+                                                        </div>
+                                                        <div class="pt-1 mb-4">
+                                                            <a href="ListaRecenzija.html" class="btn btn-dark btn-lg btn-block" id="listarecenzija" type="button">Lista recenzija</a>
                                                         </div>
                                                     </div>
                                                 </form>
