--- a/Online Shop/OstaviRecenziju.html
+++ b/Online Shop/OstaviRecenziju.html
@@ -1,10 +1,233 @@
 ﻿<!DOCTYPE html>
-<html>
+<html data-bs-theme="light">
 <head>
     <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+    <meta name="viewport" content="width=device-width" />
+    <title>Ostavljanje Recenzije - Shopy</title>
+    <link rel="stylesheet" href="Content/bootstrap.min.css">
+    <script src="Scripts/jquery-3.7.0.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
+    <script src="Scripts/bootstrap.bundle.min.js"></script>
+    <script src="Scripts/modernizr-2.8.3.js"></script>
+     <style>
+        .navbar .login-btn {
+            position: absolute;
+            top: 7px;
+            right: 95px;
+        }
 
+        .navbar .profil-btn {
+            position: absolute;
+            top: 10px;
+            right: 35px;
+        }
+
+        @media (max-width: 767px) {
+            .navbar .login-btn {
+                right: 75px;
+            }
+        }
+
+        .navbar .register-btn {
+            position: absolute;
+            top: 7px;
+            right: 15px;
+        }
+
+        @media (max-width: 767px) {
+            .navbar .register-btn {
+                right: 175px;
+            }
+        }
+    </style>
+    <script>
+        var uloga;
+        // ako je ulogovan, prebaci ga na index - slucaj da ide na back opciju
+        $.ajax({
+            url: "/api/auth/Ulogovan",
+            type: "GET",
+            async: false,
+            cache: false,
+            dataType: "json",
+            contentType: "application/json; charset=utf-8",
+            success: function (response) {
+                if (response != null) {
+                    if (JSON.parse(response).Kod !== 0) // korisnik je ulogovan, ne moze da se registruje
+                    {
+                        window.location.href = "Index.html";
+                    }
+                }
+            }
+        });
+
+        // ako je ulogovan, prebaci prikazi meni u zavisnoti od uloge
+        $.ajax({
+            url: "/api/auth/AuthKorisnik",
+            type: "GET",
+            async: false,
+            cache: false,
+            dataType: "json",
+            contentType: "application/json; charset=utf-8",
+            success: function (response) {
+                var data = JSON.parse(response);
+                if (data.KorisnickoIme !== "") {
+                    // prikazi podatke i promeni meni
+                    // sakri dugmice za login i register
+                    $(function () {
+                        $("#pl").remove();
+
+                        // prikazi meni za nalog
+                        $('#poruka').text("Dobrodošli nazad, " + data.KorisnickoIme);
+
+                        // Prikazi samo dugmice vezane za korisnika koji ima datu ulogu
+                        uloga = data.Uloga;
+
+                        if (uloga !== 0) {
+                            // nije pitanju kupac - povratak na pocetnu stranicu
+                            window.location.href = "MojProfil.html";
+                        }
+
+                        // id iz url
+                        let searchParams = new URLSearchParams(window.location.search)
+                        if (!searchParams.has('id')) window.location.href = "Index.html";
+                        var Id = searchParams.get('id');
+                    });
+                }
+                else {
+                    $(function () {
+                        // korisnik nije ulogovan - prikazi login i register
+                        $("#pl").show();
+
+                        // sakri meni za nalog
+                        $('#profil').addClass('d-none');
+                    });
+                }
+            }
+        });
+
+        // akcija za dodavanje recenzije
+        jQuery(function () {
+            $("#divgreske").addClass("d-none");
+            $("body").removeClass("d-none");
+        });
+
+
+    </script>
+</head>
+<body id="bodyauth" class="d-none">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+        <div class="container">
+            <a href="/" class="navbar-brand">Shopy</a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+                <ul class="navbar-nav flex-grow-1">
+                    <li><a href="/" class="nav-link">Početna stranica</a></li>
+                    <li id="pl">
+                        <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
+                        <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
+                    </li>
+                    <li id="profil">
+                        <div class="btn-group profil-btn">
+                            <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span id="poruka"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
+                                <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container body-content mt-4 mb-5">
+        <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 mx-auto mt-4">
+                        <div class="row d-flex justify-content-center align-items-center h-100">
+                            <div class="col col-xl-10">
+                                <div class="card" style="border-radius: 1rem;">
+                                    <div class="row g-0">
+                                        <div class="col-md-6 col-lg-5 d-none d-md-block">
+                                            <img src="Images/rgbg.jpg" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                                        </div>
+                                        <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                                            <div class="card-body p-4 p-lg-5 text-black">
+                                                <form id="form" name="form" enctype="multipart/form-data">
+                                                    <div class="d-flex mb-3 pb-1">
+                                                        <span class="h1 fw-bold mb-0">Shopy</span>
+                                                    </div>
+                                                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Dodavanje recenzije za porudžbinu</h5>
+
+                                                    <hr />
+                                                    <div>
+                                                        <h2 id="pid">Porudzbina #1</h2>
+                                                        <p class="text-muted fs-5" id="datum">Izvršena dana: 21.06.2023.</p>
+                                                        <span>
+                                                            <img alt="proizvod" src="Images/mainpf.jpg" id="slikapr" class="rounded-circle" width="80" height="80" />&emsp;
+                                                            <span id="nazivpr" class="text-break">Proizvod naziv dasjdsakdsakdksajd kjkas</span><br />
+                                                        </span>
+                                                        <hr class="text-dark" />
+                                                        <p class="text-success fw-semibold fs-4" id="ukupaniznos">Iznos porudžbine: 1212 RSD</p>
+                                                    </div>
+                                                    <hr />
+                                                    <br />
+
+                                                    <div id="divgreske" class="alert alert-danger d-flex align-items-center" role="alert">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-exclamation-mark" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                                            <path d="M12 19v.01" />
+                                                            <path d="M12 15v-10" />
+                                                        </svg>
+                                                        <span id="greske">
+                                                        </span>
+                                                    </div>
+                                                    <div class="form-outline mb-4">
+                                                        <label class="form-label" for="naslov">Naslov recenzije</label>
+                                                        <input type="text" id="naslov" autofocus class="form-control form-control-lg" required />
+                                                        <span id="g1" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
+                                                    </div>
+                                                    <div class="form-outline mb-4">
+                                                        <label class="form-label" for="sadrzaj">Sadržaj recenzije</label>
+                                                        <textarea id="sadrzaj" class="form-control" rows="5" required></textarea>
+                                                        <span id="g2" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
+                                                    </div>
+                                                    <div class="form-outline mb-4">
+                                                        <label class="form-label" for="slika">Slika uz recenziju</label>
+                                                        <input type="file" accept="image/*" class="form-control" id="slika" required />
+                                                        <span id="g3" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
+                                                    </div>
+                                                    <div class="form-outline mb-4">
+                                                        <label class="form-label" for="pregled">Pregled slike recenzije</label>
+                                                        <br />
+                                                        <img id="pregled" alt="pregled" src="/Images/productplc.jpg" width="80" height="80" class="img-fluid" />
+                                                    </div>
+                                                    <p class="my-3 pb-lg-2 fw-bold text-danger">
+                                                        Recenzija će biti vidljiva isključivo administratorima. Kada administrator odobri recenziju ona postaje vidljiva na platformi Shopy.
+                                                    </p>
+                                                    <div class="pt-1 mb-4">
+                                                        <button class="btn btn-dark btn-lg btn-block" id="izmenabtn" type="button">Dodavanje recenzije</button>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
