--- a/Online Shop/OstaviRecenziju.html
+++ b/Online Shop/OstaviRecenziju.html
@@ -94,7 +94,38 @@
                         Id = searchParams.get('id');
 
                         // popuni informacije o porudzbini za koju se dodaje recenzija
+                        $.ajax({
+                            url: "/api/orders/PorudzbinaRecenzija",
+                            type: "POST",
+                            data: JSON.stringify({
+                                Id: Id
+                            }),
+                            async: false,
+                            cache: false,
+                            dataType: "json",
+                            contentType: "application/json; charset=utf-8",
+                            success: function (response) {
+                                var data = JSON.parse(response);
 
+                                if (data.hasOwnProperty("Id")) {
+                                    // tek sada moze videti formu
+                                    $("#bodyauth").removeClass("d-none");
+
+                                    // popunjavanje forme podacima
+                                    $("#pid").text("Porudžbina #" + data.Id);
+                                    $("#datum").text("Izvršena: " + data.Datum);
+                                    $("#nazivpr").text(data.NazivProizvoda);
+                                    $("#ukupaniznos").text("Ukupan iznos: " + data.UkupanIznos + " RSD");
+                                    $("#slikapr").attr('src', "/Uploads/" + data.Slika);
+                                    return false;
+                                }
+                                else {
+                                    // desila se greska
+                                    $("#divgreske").removeClass('d-none');
+                                    $("#greske").text(data.Poruka);
+                                }
+                            }
+                        });
                     });
                 }
                 else {
@@ -292,7 +323,7 @@
                                                         <h2 id="pid"></h2>
                                                         <p class="text-muted fs-5" id="datum"></p>
                                                         <span>
-                                                            <img alt="proizvod" src="Images/mainpf.jpg" id="slikapr" class="rounded-circle" width="80" height="80" />&emsp;
+                                                            <img alt="proizvod" src="" id="slikapr" class="rounded-circle" width="80" height="80" />&emsp;
                                                             <span id="nazivpr" class="text-break"></span><br />
                                                         </span>
                                                         <hr class="text-dark" />
