prepare for review add

--- a/Online Shop/OstaviRecenziju.html
+++ b/Online Shop/OstaviRecenziju.html
@@ -231,7 +231,7 @@
                                     data: JSON.stringify({
                                         PorudzbinaId: Id,
                                         Naslov: naslov,
-                                        Sadrzaj: sadryaj,
+                                        Sadrzaj: sadrzaj,
                                         Slika: msg.Poruka,
                                     }),
                                     async: false,
