--- a/Online Shop/Proizvod.html
+++ b/Online Shop/Proizvod.html
@@ -188,7 +188,7 @@
                                 $("#recenzijelista").append(
                                     '<div class="col-md-10 pt-4"><div class="card"><div class="card-body m-3"><div class="row"><div class="col-lg-4 d-flex justify-content-center align-items-center mb-4 mb-lg-0">' +
                                     '<img src="/Uploads/' + data.Slika + '" class=" shadow-1 rounded-5" alt="sliak recenzije" width="150" height="150" /></div>' +
-                                    '<div class="col-lg-8"><h4>' + data.Naslov + '</h4><p class="text-muted fw-light mb-4">' + data.SadrzajRecenzije + '</p><p class="fw-bold lead mb-1"><strong>' + data.Ime + ' ' + data.Prezime + '</strong></p>' +
+                                    '<div class="col-lg-8"><h4>' + data.Naslov + '</h4><p class="text-muted fw-light mb-4">' + data.SadrzajRecenzije + '</p><p class="fw-bold lead mb-1"><strong>' + data.Recenzent.Ime + ' ' + data.Recenzent.Prezime + '</strong></p>' +
                                     '<p class="fw-bold text-muted mb-0">Shopy Kupac</p></div></div></div></div></div>'
                                 );
                             });
