--- a/Online Shop/MojePorudzbine.html
+++ b/Online Shop/MojePorudzbine.html
@@ -159,14 +159,26 @@
                                     success: function (response) {
                                         var data = JSON.parse(response);
 
-                                        if (data.Kod == 0) {
-                                            // postoji, moze izmeniti ili obrisati
+                                        if (data.Kod === 0) {
+                                            // postoji i ceka se na odobrenje, kupac je moze izmeniti
                                             ostaviRecenziju = "";
                                             izmeniRecenziju = '<a href="IzmeniRecenziju.html?id=' + k.Id + '" class="btn btn-outline-success">Izmenite recenziju</a>';
                                             obrisiRecenziju = '<a href="ObrisiRecenziju.html?id=' + k.Id + '" class="btn btn-outline-danger">Obrišite recenziju</a>';
                                         }
-                                        else {
+                                        else if (data.Kod === 5) { // recenzija ne postoji uopste, tek se treba kreirati
                                             ostaviRecenziju = '<a href="OstaviRecenziju.html?id=' + k.Id + '" class="btn btn-outline-primary">Ostavite recenziju</a>';
+                                            izmeniRecenziju = "";
+                                            obrisiRecenziju = "";
+                                        }
+                                        else if (data.Kod === 1) {
+                                            // odobrena je, nema dalje izmene
+                                            ostaviRecenziju = '<a href="#' + k.Id + '" class="btn btn-outline-success disabled">Recenzija odobrena</a>';
+                                            izmeniRecenziju = "";
+                                            obrisiRecenziju = "";
+                                        }
+                                        else if (data.Kod === 2) {
+                                            // odbijena je, nema dalje izmene
+                                            ostaviRecenziju = '<a href="#' + k.Id + '" class="btn btn-outline-danger disabled">Recenzija odbijena</a>';
                                             izmeniRecenziju = "";
                                             obrisiRecenziju = "";
                                         }
