--- a/Online Shop/ListaPorudzbina.html
+++ b/Online Shop/ListaPorudzbina.html
@@ -152,7 +152,7 @@
                                 '<div class="card-body">' +
                                 '<div class="row justify-content-between">' +
                                 '<div class="col-2">' +
-                                '<img alt="proizvod" class="card-img-top" width="150" height="150" src="/Images/package.png" />' +
+                                '<img alt="proizvod" class="card-img-top rounded-circle" width="150" height="150" src="/Uploads/' + k.Proizvod.Slika + '" />' +
                                 '</div>' +
                                 '<div class="col-10">' +
                                 '<div class="d-flex justify-content-between">' +
